# ZIP

./: .gitattributes  README.md
scripts/: fig1.sh  precompute.sh  table1_2.sh  table3.sh  table4.sh  table6.sh
src/CNN/UTKFace_MAE/: CNN_MAE.py
src/LLM/: miniBERT_accuracy.py
src/piecewise_polynomial_approximation/: approx.py  extract.py
src/piecewise_polynomial_approximation/precomputed_lookup_tables_ieee754/: elu_approx.py  gelu_approx.py  layernorm_approx.py  selu_approx.py  softmax_approx.py
src/proof_generation/ZIP_proof_generation/ZIP_circuit/: go.mod  go.sum
src/proof_generation/ZIP_proof_generation/ZIP_lookup/: Cargo.toml  add_interval_index.py  config.rs
src/proof_generation/ZIP_proof_generation/ZIP_lookup/examples/: multi_lookup.rs
src/proof_generation/ZIP_proof_generation/ZIP_lookup/examples/y_yprime_examples/: elu_y_yprime.txt  gelu_y_yprime.txt  layernorm_y_yprime.txt  selu_y_yprime.txt  softmax_y_yprime.txt
src/proof_generation/ZIP_proof_generation/precomputed_lookup_tables_ieee754_hex/: elu_intervals_ieee754.txt  gelu_coefficients_ieee754.txt  gelu_intervals_ieee754.txt  layernorm_coefficients_ieee754.txt  layernorm_intervals_ieee754.txt  softmax_coefficients_ieee754.txt
src/proof_generation/caulk/src/multi/: mod.rs  setup.rs
src/proof_generation/caulk/srs/: srs_1048578.setup  srs_131074.setup  srs_16386.setup  srs_262146.setup  srs_32770.setup  srs_524290.setup  srs_65538.setup  srs_8194_381.setup
src/proof_generation/zk-Location/: main.go
src/proof_generation/zk-Location/float/: float_constraints_test.go
(+8 files in other folders)
